2001-10-03 Bernhard Held <bernhard@bernhardheld.de>

	* src/device/lib/_mulint.c  : new, with assember functions

	* src/device/lib/_mullong.c : new, with assember functions

	* src/device/lib/_divuint.c : with assember functions

	* src/device/lib/_divsint.c : with assember functions

	* src/device/lib/_divulong.c: with assember functions

	* src/device/lib/_divslong.c: with assember functions

	* src/device/lib/_moduint.c : with assember functions

	* src/device/lib/_modsint.c : with assember functions

	* src/device/lib/_modulong.c: with assember functions

	* src/device/lib/_modslong.c: with assember functions

	* src/device/lib/libint.lib:  replaced _muluint.c  and _mulsint.c  by _mulint.c

	* src/device/lib/liblong.lib: replaced _mululong.c and _mulslong.c by _mullong.c

	* src/device/lib/Makefile.in: replaced _muluint.c  and _mulsint.c  by _mulint.c
	                              replaced _mululong.c and _mulslong.c by _mullong.c

2001-10-03 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCsymt.c: sequence of specifiers in pintTypeChain() corrected

2001-10-01 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglue.c: test, if win32api is available for MINGW

2001-10-01 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCsymt.c: no more _modifier in printTypeChain()
	* support/regression/tests/driverstruct.c: REENTRANT for mcs51
	* support/regression/ports/gbz80/spec.mk: removed GENERIC
	* support/regression/ports/host/spec.mk: removed GENERIC
	* support/regression/ports/mcs51/spec.mk: removed GENERIC
	* support/regression/ports/z80/spec.mk: removed GENERIC

2001-10-01    <johan@FRIJA>

	* src/SDCC.y: fixed bug #466586 part 1

2001-10-01  Johan Knol <johan.knol@iduna.nl>

	* SDCCicode.c: z80 has no generic pointers
	* removed -s from strip in all Makefile(.in)'s. It is not needed, but Solaris chocks on it.
	
2001-09-30  Michael Hope  <michaelh@juju.net.nz>
